# job-scraper

./: .gitignore  README.md  config.py  config.yml  default_config.yml  main.py  models.py  pyproject.toml  requirements.txt
job_scraper/: main.py
job_scraper/scrapers/: website_scrapers.py
src/job_scraping/: main.py
src/job_scraping/job_scraping/: items.py  pipelines.py  settings.py  utils.py
src/job_scraping/job_scraping/configs/: academicwork_config.yml  config.py
src/job_scraping/job_scraping/pipelines/: aw_pipelines.py  loading.py  pipelines.py  transform.py  validation.py
src/job_scraping/job_scraping/spiders/: __init__.py  academicwork.py  jobup.py
